URL in include is no longer relative, no need to check the port of the notebook

--- a/Graph.ipynb
+++ b/Graph.ipynb
@@ -49,11 +49,9 @@
     "          function load() {{\n",
     "            document.getElementById(\"{id}\").pbtxt = {data};\n",
     "          }}\n",
-    "        // tf-graph-basic.build.html?download\n",
-    "        // http://localhost:8080/tf-graph-basic.build.html\n",
     "        // https://tensorboard.appspot.com/tf-graph-basic.build.html\n",
     "        </script>\n",
-    "        <link rel=\"import\" href=\"http://localhost:8888/files/tf-graph/tf-graph-basic.build.html\" onload=load()>\n",
+    "        <link rel=\"import\" href=\"/files/tf-graph/tf-graph-basic.build.html\" onload=load()>\n",
     "        \n",
     "        <div style=\"height:600px\">\n",
     "          <tf-graph-basic id=\"{id}\"></tf-graph-basic>\n",
